# spaceglider

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
src/: game.rs  main.rs
