[package]
authors = ["Dr. Ralf Berger"]
name = "spaceglider"
version = "0.1.0"
edition = "2021"
description = "OpenGL based game about an post AI war."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true            # Strip symbols from the result
lto = true              # Link time optimizations
opt-level = "z"         # Optimize for size
codegen-units = 1       # Reduce Compile-Time optimizations for production
panic = "abort"         # Simplify the panic handling

[dependencies]
glium = "*"
obj-rs = { version = "*", features = ["glium"] }
