[package]
authors = ["Dr. Ralf Berger"]
name = "spaceglider"
version = "0.1.0"
edition = "2021"
description = "BEVY based game about a post AI war."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true            # Strip symbols from the result
lto = true              # Link time optimizations
opt-level = "z"         # Optimize for size
codegen-units = 1       # Reduce Compile-Time optimizations for production
panic = "abort"         # Simplify the panic handling

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
